# -android-

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yu/threeaudioplayers/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/yu/threeaudioplayers/: AACDecoderUtil.java  AACFileDecoderActivity.java  AudioRecordThread.java  FFmpegMainActivity.java  H264FileDecodeActivity.java  LocalMusicAdapter.java  LocalMusicBean.java  MainActivity.java  MediaCodecUtil.java  MediacodecMainActivity.java  MediaplayerMainActivity.java  MyAudioTrack.java  ReadAACFileThread.java  ReadH264FileThread.java
app/src/main/res/layout/: activity_f_fmpeg_main.xml  activity_main.xml  activity_mediacodec_main.xml  activity_mediaplayer_main.xml  item_local_musicc.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/yu/threeaudioplayers/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
